--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.75.0",
     "turndown": "^7.1.3",
+    "unsplash-js": "^7.0.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
